feat: finalizing the docs
