# 39/internal/infra/webserver/handlers/product_handlers.go
@@ -93,6 +93,18 @@ func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(products)
 }
 
+// GetProduct godoc
+// @Summary      Get a Product
+// @Description  Get a Product
+// @Tags         products
+// @Accept       json
+// @Produce      json
+// @Param        id      path      string  true  "Product ID" Format(uuid)
+// @Sucess			 200	   {object}   entity.Product
+// @Failure      400
+// @Failure 		 500     {object}  Error
+// @Router			 /products/{id} [get]
+// @Security ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -109,6 +121,19 @@ func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(product)
 }
 
+// Update Product godoc
+// @Summary      Update a Product
+// @Description  Update a Product
+// @Tags         products
+// @Accept       json
+// @Produce      json
+// @Param        id      path      string  true  "Product ID" Format(uuid)
+// @Param        request  body      dto.CreateProductInput  true  "product request"
+// @Sucess			 200	   
+// @Failure      404
+// @Failure 		 500     {object}  Error
+// @Router			 /products/{id} [put]
+// @Security ApiKeyAuth
 func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -143,6 +168,18 @@ func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
+// Delete Product godoc
+// @Summary      Delete a Product
+// @Description  Delete a Product
+// @Tags         products
+// @Accept       json
+// @Produce      json
+// @Param        id      path      string  true  "product ID" Format(uuid)
+// @Sucess			 200
+// @Failure      404
+// @Failure 		 500     {object}  Error
+// @Router			 /products/{id} [delete]
+// @Security ApiKeyAuth
 func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
